# MatrixProject

./: README.md  main.cpp  matrix.cpp  matrix.h
CMake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MatrixApp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  matrix.vcxproj  matrix.vcxproj.filters
CMake/matrix.dir/Debug/: matrix.exe.recipe  matrix.ilk
CMake/matrix.dir/Debug/matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CMake/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
CMake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
CMake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
